Fixed Abra image not showing bug

--- a/CSS/articleStyles.css
+++ b/CSS/articleStyles.css
@@ -59,11 +59,11 @@ body {
 .parallax-nav {
     position: -webkit-sticky;
     position: sticky;
-    top:0;
+    top: 0;
     /* bottom: 1rem; */
     margin-left: 50%;
     transform: translateX(-50%);
-    padding: 10px;
+    padding: 25px;
     text-align: center;
     width: 100%;
     background-color: #181A1B;
